# 4156-Miniproject-2024-Students-Cplusplus

./: .gitignore  Bugs.md  Bugs.txt  CMakeLists.txt  Doxyfile  LICENSE  README.md  bugs.txt  citations.txt  coverage.sh  honesty.txt
IndividualMiniprojectC++/: Bugs.md  CMakeLists.txt
IndividualMiniprojectC++/docs/: Doxyfile  README.md
IndividualMiniprojectC++/docs/html/: Course_8h_source.html  Department_8h_source.html  Globals_8h_source.html  MyApp_8h_source.html  MyFileDatabase_8h_source.html  RouteController_8h_source.html  annotated.html  classCourse-members.html  classCourse.html  classDepartment-members.html  classDepartment.html  classMyApp-members.html  classMyApp.html  classMyFileDatabase-members.html  classMyFileDatabase.html  classRouteController-members.html  classRouteController.html  classes.html  dir_68267d1309a1af8e8297ef4c3efbcdba.html  dir_d44c64559bbebec7f509842c48db8b23.html  files.html  functions.html  functions_func.html  graph_legend.html  index.html  menudata.js
IndividualMiniprojectC++/docs/html/search/: all_0.js  all_1.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  functions_0.js  functions_1.js  functions_2.js  functions_3.js  functions_4.js  functions_5.js  functions_6.js  functions_7.js  functions_8.js  functions_9.js  searchdata.js
IndividualMiniprojectC++/docs/latex/: annotated.tex  classCourse.tex  classDepartment.tex  classMyApp.tex  classMyFileDatabase.tex  classRouteController.tex  refman.tex
IndividualMiniprojectC++/external_libraries/: README.txt
IndividualMiniprojectC++/external_libraries/boost_1_86_0/doc/html/boost_units/: version_id.html
IndividualMiniprojectC++/external_libraries/boost_1_86_0/doc/html/circular_buffer/: version_id.html
IndividualMiniprojectC++/external_libraries/boost_1_86_0/doc/html/quickbook/syntax/: block.html
IndividualMiniprojectC++/external_libraries/boost_1_86_0/libs/assert/doc/html/: assert.html
IndividualMiniprojectC++/external_libraries/boost_1_86_0/libs/charconv/doc/html/: charconv.html
IndividualMiniprojectC++/external_libraries/boost_1_86_0/libs/cobalt/doc/html/: index.html
IndividualMiniprojectC++/external_libraries/boost_1_86_0/libs/compat/doc/html/: compat.html
IndividualMiniprojectC++/external_libraries/boost_1_86_0/libs/contract/doc/html/: contract.docbook
IndividualMiniprojectC++/external_libraries/boost_1_86_0/libs/describe/doc/html/: describe.html
IndividualMiniprojectC++/external_libraries/boost_1_86_0/libs/endian/doc/html/: endian.html
IndividualMiniprojectC++/external_libraries/boost_1_86_0/libs/gil/doc/_build/doctrees/: environment.pickle
IndividualMiniprojectC++/external_libraries/boost_1_86_0/libs/gil/doc/html/: genindex.html  index.html  installation.html  io.html  naming.html  numeric.html  search.html  toolbox.html
IndividualMiniprojectC++/external_libraries/boost_1_86_0/libs/gil/doc/html/design/: basics.html  channel.html  color_base.html  color_space.html  concepts.html  (+13 more)
IndividualMiniprojectC++/external_libraries/boost_1_86_0/libs/io/doc/html/: io.html
IndividualMiniprojectC++/external_libraries/boost_1_86_0/libs/lambda2/doc/html/: lambda2.html
IndividualMiniprojectC++/external_libraries/boost_1_86_0/libs/mp11/doc/html/: mp11.html  simple_cxx11_metaprogramming.html  simple_cxx11_metaprogramming_2.html
IndividualMiniprojectC++/external_libraries/boost_1_86_0/libs/parameter/doc/html/: index.html  reference.html
IndividualMiniprojectC++/external_libraries/boost_1_86_0/libs/parameter_python/doc/html/: index.html
IndividualMiniprojectC++/external_libraries/boost_1_86_0/libs/redis/doc/html/: adapt_8hpp_source.html  adapter_2ignore_8hpp_source.html  adapters_8hpp_source.html  annotated.html  classboost_1_1redis_1_1basic__connection-members.html  classboost_1_1redis_1_1basic__connection.html  classboost_1_1redis_1_1connection-members.html  classboost_1_1redis_1_1connection.html  classboost_1_1redis_1_1detail_1_1connection__base-members.html  classboost_1_1redis_1_1detail_1_1connection__base.html  classboost_1_1redis_1_1logger-members.html  classboost_1_1redis_1_1logger.html  classboost_1_1redis_1_1request-members.html  classboost_1_1redis_1_1request.html  classes.html  config_8hpp_source.html  connection_8hpp_source.html  connection__base_8hpp_source.html  connector_8hpp_source.html  cpp17__intro_8cpp_source.html  cpp17__intro__sync_8cpp_source.html  cpp20__chat__room_8cpp_source.html  cpp20__containers_8cpp_source.html  cpp20__echo__server_8cpp_source.html  cpp20__intro_8cpp_source.html  cpp20__intro__tls_8cpp_source.html  cpp20__json_8cpp_source.html  cpp20__protobuf_8cpp_source.html  cpp20__resolve__with__sentinel_8cpp_source.html  cpp20__streams_8cpp_source.html  cpp20__subscriber_8cpp_source.html  dir_1878a3f4746a95c6aad317458cc7ef80.html  dir_2af50cfc368ea8dce46173e7b4466e8e.html  dir_2bbd45fa28662f45dd88874cf97c565f.html  dir_2cc765c1b27cc1fc357a11cf7463bf5b.html  dir_cfafba98a580ce4b62f8a6fa96d7cbb0.html  dir_d44c64559bbebec7f509842c48db8b23.html  dir_e0f7558b56b87abd5cc853e30c0e8308.html  dir_f302fe01f65b2994e2f6bed4560d702c.html  error_8hpp_source.html  (+38 more)
IndividualMiniprojectC++/external_libraries/boost_1_86_0/libs/smart_ptr/doc/html/: smart_ptr.html
IndividualMiniprojectC++/external_libraries/boost_1_86_0/libs/system/doc/html/: system.html
IndividualMiniprojectC++/external_libraries/boost_1_86_0/libs/throw_exception/doc/html/: throw_exception.html
IndividualMiniprojectC++/external_libraries/boost_1_86_0/libs/variant2/doc/html/: variant2.html
IndividualMiniprojectC++/include/: Course.h  Department.h  Globals.h  MyApp.h  MyFileDatabase.h  RouteController.h
IndividualMiniprojectC++/src/: Course.cpp  Department.cpp  Globals.cpp  MyApp.cpp  MyFileDatabase.cpp  RouteController.cpp  main.cpp
IndividualMiniprojectC++/test/: CourseUnitTests.cpp  DepartmentTests.cpp  DepartmentUnitTests.cpp  MyAppTests.cpp  MyAppUnitTests.cpp  MyFileDatabaseTests.cpp  MyFileDatabaseUnitTests.cpp  RouteControllerTests.cpp  RouteControllerUnitTests.cpp  sample.cpp
(+78 files in other folders)
